popups: Fix not visible checkboxes menu items

--- a/theme/parts/icons.css
+++ b/theme/parts/icons.css
@@ -14,6 +14,7 @@ button.email-action-flagged#starMessageButton,
 .today-pane-cycler,
 .notification-close,
 .subviewbutton-back .toolbarbutton-icon,
+.subviewbutton-iconic[type="checkbox"] > .toolbarbutton-icon,
 .toolbarbutton-1 > .toolbarbutton-menu-dropmarker,
 .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker,
 button.button-menu-list,
